--- a/views/msg_detail.ejs
+++ b/views/msg_detail.ejs
@@ -5,8 +5,12 @@
     <title>msg detail</title>
   </head>
   <body>
-    <div><%= title %></div>
-    <hr>
-    <div><%= contents %></div>
+    <% if(user) { %>
+      <div><%= title %></div>
+      <hr>
+      <div><%= contents %></div>
+    <% } else { %>
+      접근 권한이 없습니다.
+    <% } %>
   </body>
 </html>
