접근 권한이 없습니다git add viewsgit add views

--- a/views/msg_detail.ejs
+++ b/views/msg_detail.ejs
@@ -10,7 +10,7 @@
       <hr>
       <div><%= contents %></div>
     <% } else { %>
-      접근 권한이 없습니다.
+      접근 권한이 없습니다!!!!!!!!!!!!!!!!!!!!!!!!!
     <% } %>
   </body>
 </html>
