--- a/views/msg_test.ejs
+++ b/views/msg_test.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>msg test</title>
+    <title>msg test !!</title>
   </head>
   <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
   <body>
