바뀐것확인

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
     <div>공모전 : <%= userdata[i].competition %></div>
     <div>자격증 : <%= userdata[i].certificate %></div>
     <div>해외봉사활동 : <%= userdata[i].activity %></div>
+    <div>바꼇는지확인</div>
     <% } %>
   </body>
 </html>
