--- a/views/join.ejs
+++ b/views/join.ejs
@@ -11,6 +11,8 @@
         crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascript/join.js"></script>
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -30,7 +32,7 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">아이디</label>
-                        <input type="text" id="user_ID" placeholder="" class="supportForm form-control">
+                        <input type="text" id="user_ID" placeholder="본인의 이메일을 적어주세요." class="supportForm form-control">
                     </div>
                 </div>
 
@@ -67,13 +69,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">학년</label>
-                        <select class="form-control" id="grade">
-                            <option>1학년</option>
-                            <option>2학년</option>
-                            <option>3학년</option>
-                            <option>4학년</option>
-                            <option>5학년(건축학과)</option>
-                            <option>초과학년</option>
+                        <select class="form-control" id="grade" name = "grade_selbox">
+                            <option value ="1">1학년</option>
+                            <option value ="2">2학년</option>
+                            <option value ="3">3학년</option>
+                            <option value ="4">4학년</option>
+                            <option value ="5">5학년(건축학과)</option>
+                            <option value ="6">초과학년</option>
                         </select>
                     </div>
                 </div>
@@ -96,16 +98,16 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">토스</label>
-                        <select class="form-control" id="toss">
-                            <option>미응시</option>
-                            <option>Level1</option>
-                            <option>Level2</option>
-                            <option>Level3</option>
-                            <option>Level4</option>
-                            <option>Level5</option>
-                            <option>Level6</option>
-                            <option>Level7</option>
-                            <option>Level8</option>
+                        <select class="form-control" id="toss" name = "toss_grade">
+                            <option value="1">미응시</option>
+                            <option value="2" >Level1</option>
+                            <option value="3">Level2</option>
+                            <option value="4">Level3</option>
+                            <option value="5">Level4</option>
+                            <option value="6">Level5</option>
+                            <option value="7">Level6</option>
+                            <option value="8">Level7</option>
+                            <option value="9">Level8</option>
                         </select>
                     </div>
                 </div>
@@ -113,15 +115,15 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">오픽</label>
-                        <select class="form-control" id="opic">
-                            <option>미응시</option>
-                            <option>NL</option>
-                            <option>NM</option>
-                            <option>NH</option>
-                            <option>IL</option>
-                            <option>IM</option>
-                            <option>IH</option>
-                            <option>AL</option>
+                        <select class="form-control" id="opic" name="opic_grade">
+                            <option value="1">미응시</option>
+                            <option value="1">NL</option>
+                            <option value="1">NM</option>
+                            <option value="1">NH</option>
+                            <option value="1">IL</option>
+                            <option value="1">IM</option>
+                            <option value="1">IH</option>
+                            <option value="1">AL</option>
                         </select>
 
                     </div>
@@ -130,13 +132,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">봉사활동 횟수</label>
-                        <select class="form-control" id="volunteer">
-                            <option>0번</option>
-                            <option>1번</option>
-                            <option>2번</option>
-                            <option>3번</option>
-                            <option>4번</option>
-                            <option>5회이상</option>
+                        <select class="form-control" id="volunteer" name="volunterr_num">
+                            <option value="0">0번</option>
+                            <option value="1">1번</option>
+                            <option value="2">2번</option>
+                            <option value="3">3번</option>
+                            <option value="4">4번</option>
+                            <option value="5">5회이상</option>
                         </select>
                     </div>
                 </div>
@@ -145,13 +147,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">인턴경험</label>
-                        <select class="form-control" id="intern">
-                            <option>0번</option>>
-                            <option>1번</option>
-                            <option>2번</option>
-                            <option>3번</option>
-                            <option>4번</option>
-                            <option>5회이상</option>
+                        <select class="form-control" id="intern" name="intern_num">
+                            <option value="1">0번</option>>
+                            <option value="2">1번</option>
+                            <option value="3">2번</option>
+                            <option value="4">3번</option>
+                            <option value="5">4번</option>
+                            <option value="6">5회이상</option>
                         </select>
                     </div>
                 </div>
@@ -159,13 +161,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">공모전 수상</label>
-                        <select class="form-control" id="Competition">
-                            <option>0번</option>
-                            <option>1번</option>
-                            <option>2번</option>
-                            <option>3번</option>
-                            <option>4번</option>
-                            <option>5회이상</option>
+                        <select class="form-control" id="Competition" name="competition_num">
+                            <option value="1">0번</option>
+                            <option value="2">1번</option>
+                            <option value="3">2번</option>
+                            <option value="4">3번</option>
+                            <option value="5">4번</option>
+                            <option value="6">5회이상</option>
                         </select>
                     </div>
                 </div>
@@ -173,13 +175,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">해외 연수</label>
-                        <select class="form-control" id="aborad">
-                            <option>0번</option>>
-                            <option>1번</option>
-                            <option>2번</option>
-                            <option>3번</option>
-                            <option>4번</option>
-                            <option>5회이상</option>
+                        <select class="form-control" id="aborad" name="aboard_num">
+                            <option value="1">0번</option>>
+                            <option value="2">1번</option>
+                            <option value="3">2번</option>
+                            <option value="4">3번</option>
+                            <option value="5">4번</option>
+                            <option value="6">5회이상</option>
                         </select>
                     </div>
                 </div>
@@ -187,13 +189,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">자격증</label>
-                        <select class="form-control" id="certificate">
-                            <option>0개</option>>
-                            <option>1개</option>
-                            <option>2개</option>
-                            <option>3개</option>
-                            <option>4개</option>
-                            <option>5개이상</option>
+                        <select class="form-control" id="certificate" name="certificate_num">
+                            <option value="1">0개</option>>
+                            <option value="2">1개</option>
+                            <option value="3">2개</option>
+                            <option value="4">3개</option>
+                            <option value="5">4개</option>
+                            <option value="6">5개이상</option>
                         </select>
                     </div>
                 </div>
@@ -201,16 +203,16 @@
                 <div class="form-group">
                         <div class="col-sm-6">
                             <label for="firstName" class="col-sm-6 control-label">직군</label>
-                            <select class="form-control" id="job_Part">
-                                <option>소프트웨어/IT</option>>
-                                <option>경영/재무</option>
-                                <option>마케팅</option>
-                                <option>기타</option>
+                            <select class="form-control" id="job_Part" name="job_Part">
+                                <option value="1">소프트웨어/IT</option>>
+                                <option value="2">경영/재무</option>
+                                <option value="3">마케팅</option>
+                                <option value="4">기타</option>
                             </select>
                         </div>
                     </div>
 
-                <div class="form-group" id="join_Button"> 
+                <div class="form-group" id="join_Button">
                     <div class="col-sm-6 col-sm-offset-3">
                         <button style="margin-bottom: 3%"type="button" class="btn btn-danger btn-block" id='applyButton'>회원 가입</button>
                     </div>
@@ -219,11 +221,10 @@
             </form>
         </div>
     </div>
-    <script>
-    var logo=document.getElementById('logo_Image');
-    logo.onclick=function(){
-    location.href='http://34.219.126.51:3000';
-}
+  <script>
+  $('#logo_Image').click(function(){
+    $(window).attr('location','/');
+  });
 </script>
 </body>
 </html>
