--- a/views/UserSearch.ejs
+++ b/views/UserSearch.ejs
@@ -5,19 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>User Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="stylesheets/UserSearch.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/userSearch.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="javascripts/scripts.js"></script>
 </head>
 <body>
-    <div><h1 style="color: white;">Header</h1></div> <!-- 헤더 부분 -->
-
+    <div id="nav_Div">
+        <div id="logo_Div">
+            <img src="/images/logo4.png" id="logo_Image" height="100%">
+        </div>
+        <div id="user_Input">
+            <div id="help_Vertical">
+                <div id="message_Div">
+                    <img id="message_Update" src="/images/message_Icon.png" height="13%" />
+                    <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
+                </div>
+                <div>
+                    &nbsp;
+                    <strong>seongjin571</strong>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="article_div">
 
         <div>
-            <h3 style="color: rgb(187, 187, 187);">사용자 검색</h3>
+            <h3 style="color: rgb(187, 187, 187);">(소프트웨어/IT) 직군 사용자 검색</h3>
         </div>
 
         <div class="container-fluid">
@@ -76,35 +90,56 @@
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <label for="volunteer" class="control-label form_control_label">봉사</label>
                     <select class="form_control_styler">
-                        <option>무관</option>
-                        <option>0회</option>
-                        <option>1~3회</option>
-                        <option>2~3회</option>
-                        <option>4회 </option>
+                            <option>무관</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                     </select>
                 </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <label for="internship" class="control-label form_control_label">인턴</label>
                     <select class="form_control_styler">
+                            <option>무관</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                     </select>
                 </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <label for="contests" class="control-label form_control_label">공모전</label>
                     <select class="form_control_styler">
+                            <option>무관</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                     </select>
                 </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <label for="overseas" class="control-label form_control_label">해외경험</label>
                     <select class="form_control_styler">
+                            <option>무관</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                     </select>
                 </div>
 
                 <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
                     <label for="licenses" class="control-label form_control_label">자격증</label>
                     <select class="form_control_styler">
+                            <option>무관</option>
+                            <option>0개</option>
+                            <option>1개</option>
+                            <option>2개</option>
+                            <option>3개</option>
+                            <option>4개 이상</option>
                     </select>
                 </div>
             </div>
@@ -115,7 +150,7 @@
         </div>
 
         <div class="search_button_div">
-            <div class="search_button"> <!-- 검색 버튼 -->
+            <div class="search_button" onclick="addStudentList(1,2,3)"> <!-- 검색 버튼 -->
                 <span style="margin-right: 28px;"><img src="images/search.png" alt="검색" style="width: 40px; margin-right: 4px; margin-left: -8px;">검색</span>
             </div>
         </div>
@@ -139,5 +174,6 @@
             </div>
         </div>
     </div>
+    <script src="/javascripts/userSearch.js"></script>
 </body>
 </html>
