UI 전체적 수정

--- a/public/stylesheets/userSearch.css
+++ b/public/stylesheets/userSearch.css
@@ -183,7 +183,7 @@ body,html{
     padding-top: 7px;
 }
 
-@media (max-width: 500px) {
+/* @media (max-width: 500px) {
     .std_item_div {
         font-size: 10px;
         padding-top: 12px;
@@ -198,12 +198,13 @@ body,html{
     .std_list_right {
         width: 55%;
     }
-}
+} */
 @media only screen and (max-width: 766px) and (min-width: 300px)  {
   
     #logo_Div{
         width: 60%;
     }
+
    
 }
 @media screen and (orientation: portrait) {
