--- a/views/main.ejs
+++ b/views/main.ejs
@@ -69,6 +69,12 @@
         $('.three_Button:eq(0)').click(function () {
             $(window).attr('location','/mypage');
         })
+        $('.three_Button:eq(1)').click(function () {
+            $(window).attr('location','/specComparedks');
+        })
+        $('.three_Button:eq(2)').click(function () {
+            $(window).attr('location','/userSearch');
+        })
         setInterval(function () {
                 var blink = document.getElementById("message_Update");
                 blink.style.visibility = blink.style.visibility == "" ? "hidden" : ""
