--- a/public/stylesheets/userDetail.css
+++ b/public/stylesheets/userDetail.css
@@ -1,4 +1,4 @@
-body {
+body,html{
     width: 100%;
     height: 100%;
     background: url('/images/schback.jpg') no-repeat center center fixed;
@@ -8,28 +8,82 @@ body {
     background-size: cover;
     margin: 0;
     padding: 0;
-    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.article_div {
-    width: 90%;
-    max-width: 1280px;
+#logo_Image{
+    margin-left: 3%;
+    cursor: pointer;
+}
+#nav_Div{
+    display: flex;
+    width: 100%;
+    height: 9%;
+    background-color: brown;
+}
+#logo_Div{
+    width: 75%;
+}
+.article_div{
+    margin-top: 5%;
+}
+#user_Input{
+    color:white;
     height: 100%;
-    min-height: 560px;
+    font-size: 25px;
+}
+#message_Div{
+    cursor: pointer;
+}
+
+#help_Vertical{
+    width: 100%;
+    height: 100%;
+    display: table;
+}
+#help_Vertical div{
+    display: table-cell;
+    vertical-align: middle;
+}
+#help_Vertical img{
+    display: table-cell;
+    vertical-align: middle;
+    margin-right: 5%;
+    width: auto;
+}
+#user_Input img{
+    margin-left: 10%;
+}
+
+table{
+    color: white;
+}.date{
+    width: 15%;
+}
+.content{
+    width: 70%;
+}
+.result{
+    width: 15%;
+}
+.article_div {
+    margin-left: 5%;
+    width: 90%;
+    /* max-width: 1280px; */
+    /* min-height: 560px; */
     margin-top: 4%;
     background-color: rgba(0, 0, 0, .66);
     border: 2px solid grey;
     border-radius: 6px;
     padding: 0px 14px 14px 14px;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: center;
     position: relative;
 }
 
-@media (max-width: 448px) {
+/* @media (max-width: 448px) {
     .article_div {
         padding: 0;
     }
@@ -41,16 +95,20 @@ body {
     .apply_list_div {
        padding: 0 16px 0 16px;
     }
+} */
+
+.tile_title {
+    display: flex;
+    color: #efefef;
+    font-size: 24px;
+    justify-content: center;
 }
 
-
-@media (max-width: 820px) {
-    .article_div {
-        width: 100%;
-    }
-    .apply_list_div {
-        min-width: 160px;
-    }
+.tile_value {
+    color: #dbdbdb;
+    font-size: 22px;
+    display: flex;
+    justify-content: center;
 }
 
 @media (max-width: 1199px) {
@@ -89,7 +147,52 @@ body {
     }
 }
 
-@media (min-width: 1200px) {
+@media only screen and (max-width: 766px) and (min-width: 300px)  {
+  table{
+      font-size: 9px;
+  }
+  .content{
+    width: 65%;
+}
+.result{
+    width: 20%;
+}
+    #logo_Div{
+        width: 60%;
+    }
+    .tile_title,.tile_value{
+        font-size: 15px;
+    }
+    .article_div{
+        padding: 0px ;
+    }
+   
+}
+@media screen and (orientation: portrait) {
+    strong{
+        font-size: 17px;
+    }
+    #logo_Div{
+        width: 50%;
+    }
+    .article_div {
+        width: 100%;
+        margin: 0;
+      }
+}
+@media only screen and (max-width: 1025px) and (min-width: 767px)  {
+    .article_div {
+      width: 100%;
+      margin: 0;
+    }
+        #logo_Div{
+            width: 70%;
+        }
+        strong{
+            font-size: 25px;
+        }
+}
+/* @media (min-width: 1200px) {
     .apply_list_div {
         min-width: 320px;
         border-top-right-radius: 6px;
@@ -106,7 +209,7 @@ body {
     .tile_value {
         padding-top: 6px
     }
-}
+} */
 
 .user_div {
     padding: 10px 0 0 2px;
@@ -172,19 +275,7 @@ body {
     }
 }
 
-.tile_title {
-    display: flex;
-    color: #efefef;
-    font-size: 24px;
-    justify-content: center;
-}
 
-.tile_value {
-    color: #dbdbdb;
-    font-size: 22px;
-    display: flex;
-    justify-content: center;
-}
 
 .tile_section {
     margin-top: 20px;
