--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="/styleshets/specCompare.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 
 <body>
   <div id="nav_Div">
-    <img src="logo.png" id="logo_Image" height="100%">
+    <img src="/images/logo4.png" id="logo_Image" height="100%">
     <div id="user_Input">
       <div id="help_Vertical">
         <div>
-          <img src="user.png" height="20%" />
+          <img src="/images/user.png" height="20%" />
         </div>
         <div>
           &nbsp;<strong>seongjin571</strong>
@@ -339,7 +339,9 @@
     2. DB와 그래프 연동하기(근데 여기는 아마 진우오빠나 정환이가 하지 않을까 싶어 ㅎ)
   */
 
-  
+   $('#logo_Image').click(function () {
+            $(window).attr('location','/main');
+        })
   </script>
 </body>
 
