--- a/views/join.ejs
+++ b/views/join.ejs
@@ -32,7 +32,7 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">아이디</label>
-                        <input type="text" id="user_ID" placeholder="본인의 이메일을 적어주세요." class="supportForm form-control">
+                        <input type="text" id="user_ID" placeholder="" class="supportForm form-control">
                     </div>
                 </div>
 
@@ -69,13 +69,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">학년</label>
-                        <select class="form-control" id="grade" name = "grade_selbox">
-                            <option value ="1">1학년</option>
-                            <option value ="2">2학년</option>
-                            <option value ="3">3학년</option>
-                            <option value ="4">4학년</option>
-                            <option value ="5">5학년(건축학과)</option>
-                            <option value ="6">초과학년</option>
+                        <select class="form-control" id="grade" name="grade_selbox">
+                            <option value="1">1학년</option>
+                            <option value="2">2학년</option>
+                            <option value="3">3학년</option>
+                            <option value="4">4학년</option>
+                            <option value="5">5학년(건축학과)</option>
+                            <option value="6">초과학년</option>
                         </select>
                     </div>
                 </div>
@@ -98,16 +98,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">토스</label>
-                        <select class="form-control" id="toss" name = "toss_grade">
+                        <select class="form-control" id="toss" name="toss_grade">
                             <option value="1">미응시</option>
-                            <option value="2" >Level1</option>
-                            <option value="3">Level2</option>
-                            <option value="4">Level3</option>
-                            <option value="5">Level4</option>
-                            <option value="6">Level5</option>
-                            <option value="7">Level6</option>
-                            <option value="8">Level7</option>
-                            <option value="9">Level8</option>
+                            <option>Lv4 이하</option>
+                            <option>Lv5</option>
+                            <option>Lv6</option>
+                            <option>Lv7</option>
+                            <option>Lv8</option>
                         </select>
                     </div>
                 </div>
@@ -117,13 +114,12 @@
                         <label for="firstName" class="col-sm-6 control-label">오픽</label>
                         <select class="form-control" id="opic" name="opic_grade">
                             <option value="1">미응시</option>
-                            <option value="1">NL</option>
-                            <option value="1">NM</option>
-                            <option value="1">NH</option>
-                            <option value="1">IL</option>
-                            <option value="1">IM</option>
-                            <option value="1">IH</option>
-                            <option value="1">AL</option>
+                            <option>AL</option>
+                            <option>IH</option>
+                            <option>IM3</option>
+                            <option>IM2</option>
+                            <option>IM1</option>
+                            <option>IL</option>
                         </select>
 
                     </div>
@@ -133,12 +129,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">봉사활동 횟수</label>
                         <select class="form-control" id="volunteer" name="volunterr_num">
-                            <option value="0">0번</option>
-                            <option value="1">1번</option>
-                            <option value="2">2번</option>
-                            <option value="3">3번</option>
-                            <option value="4">4번</option>
-                            <option value="5">5회이상</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                         </select>
                     </div>
                 </div>
@@ -148,12 +142,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">인턴경험</label>
                         <select class="form-control" id="intern" name="intern_num">
-                            <option value="1">0번</option>>
-                            <option value="2">1번</option>
-                            <option value="3">2번</option>
-                            <option value="4">3번</option>
-                            <option value="5">4번</option>
-                            <option value="6">5회이상</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                         </select>
                     </div>
                 </div>
@@ -162,12 +154,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">공모전 수상</label>
                         <select class="form-control" id="Competition" name="competition_num">
-                            <option value="1">0번</option>
-                            <option value="2">1번</option>
-                            <option value="3">2번</option>
-                            <option value="4">3번</option>
-                            <option value="5">4번</option>
-                            <option value="6">5회이상</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                         </select>
                     </div>
                 </div>
@@ -176,12 +166,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">해외 연수</label>
                         <select class="form-control" id="aborad" name="aboard_num">
-                            <option value="1">0번</option>>
-                            <option value="2">1번</option>
-                            <option value="3">2번</option>
-                            <option value="4">3번</option>
-                            <option value="5">4번</option>
-                            <option value="6">5회이상</option>
+                            <option>0회</option>
+                            <option>1회</option>
+                            <option>2회</option>
+                            <option>3회 이상</option>
                         </select>
                     </div>
                 </div>
@@ -190,41 +178,41 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">자격증</label>
                         <select class="form-control" id="certificate" name="certificate_num">
-                            <option value="1">0개</option>>
-                            <option value="2">1개</option>
-                            <option value="3">2개</option>
-                            <option value="4">3개</option>
-                            <option value="5">4개</option>
-                            <option value="6">5개이상</option>
+                            <option>0개</option>
+                            <option>1개</option>
+                            <option>2개</option>
+                            <option>3개</option>
+                            <option>4개 이상</option>
                         </select>
                     </div>
                 </div>
 
                 <div class="form-group">
-                        <div class="col-sm-6">
-                            <label for="firstName" class="col-sm-6 control-label">직군</label>
-                            <select class="form-control" id="job_Part" name="job_Part">
-                                <option value="1">소프트웨어/IT</option>>
-                                <option value="2">경영/재무</option>
-                                <option value="3">마케팅</option>
-                                <option value="4">기타</option>
-                            </select>
-                        </div>
+                    <div class="col-sm-6">
+                        <label for="firstName" class="col-sm-6 control-label">직군</label>
+                        <select class="form-control" id="job_Part" name="job_Part">
+                            <option value="1">소프트웨어/IT</option>>
+                            <option value="2">경영/재무</option>
+                            <option value="3">마케팅</option>
+                            <option value="4">기타</option>
+                        </select>
                     </div>
+                </div>
 
                 <div class="form-group" id="join_Button">
                     <div class="col-sm-6 col-sm-offset-3">
-                        <button style="margin-bottom: 3%"type="button" class="btn btn-danger btn-block" id='applyButton'>회원 가입</button>
+                        <button style="margin-bottom: 3%" type="button" class="btn btn-danger btn-block" id='applyButton'>회원 가입</button>
                     </div>
                 </div>
 
             </form>
         </div>
     </div>
-  <script>
-  $('#logo_Image').click(function(){
-    $(window).attr('location','/');
-  });
-</script>
+    <script>
+        $('#logo_Image').click(function () {
+            $(window).attr('location', '/');
+        });
+    </script>
 </body>
+
 </html>
