--- a/views/join.ejs
+++ b/views/join.ejs
@@ -12,7 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascript/join.js"></script>
+    <script type="text/javascript" src="/javascripts/join.js"></script>
     <!-- <script src="main.js"></script> -->
 </head>
 
@@ -69,13 +69,13 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">학년</label>
-                        <select class="form-control" id="grade" name="grade_selbox">
-                            <option value="1">1학년</option>
-                            <option value="2">2학년</option>
-                            <option value="3">3학년</option>
-                            <option value="4">4학년</option>
-                            <option value="5">5학년(건축학과)</option>
-                            <option value="6">초과학년</option>
+                        <select class="a form-control" id="grade" name="grade_selbox">
+                            <option name='1학년' selected="selected">1학년</option>
+                            <option name='2학년'>2학년</option>
+                            <option name='3학년'>3학년</option>
+                            <option name='4학년'>4학년</option>
+                            <option name='5학년'>5학년(건축학과)</option>
+                            <option name='초과학년'>초과학년</option>
                         </select>
                     </div>
                 </div>
@@ -98,8 +98,8 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">토스</label>
-                        <select class="form-control" id="toss" name="toss_grade">
-                            <option value="1">미응시</option>
+                        <select class="b form-control" id="toss" name="toss_grade">
+                            <option selected="selected">미응시</option>
                             <option>Lv4 이하</option>
                             <option>Lv5</option>
                             <option>Lv6</option>
@@ -112,7 +112,7 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">오픽</label>
-                        <select class="form-control" id="opic" name="opic_grade">
+                        <select class="c form-control" id="opic" name="opic_grade">
                             <option value="1">미응시</option>
                             <option>AL</option>
                             <option>IH</option>
@@ -129,10 +129,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">봉사활동 횟수</label>
                         <select class="form-control" id="volunteer" name="volunterr_num">
-                            <option>0회</option>
-                            <option>1회</option>
-                            <option>2회</option>
-                            <option>3회 이상</option>
+                            <option>0</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
                         </select>
                     </div>
                 </div>
@@ -142,10 +142,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">인턴경험</label>
                         <select class="form-control" id="intern" name="intern_num">
-                            <option>0회</option>
-                            <option>1회</option>
-                            <option>2회</option>
-                            <option>3회 이상</option>
+                            <option>0</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
                         </select>
                     </div>
                 </div>
@@ -154,10 +154,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">공모전 수상</label>
                         <select class="form-control" id="Competition" name="competition_num">
-                            <option>0회</option>
-                            <option>1회</option>
-                            <option>2회</option>
-                            <option>3회 이상</option>
+                            <option>0</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
                         </select>
                     </div>
                 </div>
@@ -165,11 +165,11 @@
                 <div class="form-group">
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">해외 연수</label>
-                        <select class="form-control" id="aborad" name="aboard_num">
-                            <option>0회</option>
-                            <option>1회</option>
-                            <option>2회</option>
-                            <option>3회 이상</option>
+                        <select class="form-control" id="aboard" name="aboard_num">
+                            <option>0</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
                         </select>
                     </div>
                 </div>
@@ -178,11 +178,11 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">자격증</label>
                         <select class="form-control" id="certificate" name="certificate_num">
-                            <option>0개</option>
-                            <option>1개</option>
-                            <option>2개</option>
-                            <option>3개</option>
-                            <option>4개 이상</option>
+                            <option>0</option>
+                            <option>1</option>
+                            <option>2</option>
+                            <option>3</option>
+                            <option>4</option>
                         </select>
                     </div>
                 </div>
@@ -191,10 +191,10 @@
                     <div class="col-sm-6">
                         <label for="firstName" class="col-sm-6 control-label">직군</label>
                         <select class="form-control" id="job_Part" name="job_Part">
-                            <option value="1">소프트웨어/IT</option>>
-                            <option value="2">경영/재무</option>
-                            <option value="3">마케팅</option>
-                            <option value="4">기타</option>
+                            <option >소프트웨어/IT</option>>
+                            <option >경영/재무</option>
+                            <option >마케팅</option>
+                            <option >기타</option>
                         </select>
                     </div>
                 </div>
