--- a/views/UserSearch.ejs
+++ b/views/UserSearch.ejs
@@ -6,6 +6,7 @@
     <title>User Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="/stylesheets/userSearch.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
@@ -21,10 +22,17 @@
                     <img id="message_Update" src="/images/message_Icon.png" height="13%" />
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
-                <div>
-                    &nbsp;
-                    <strong>seongjin571</strong>
-                </div>
+                <% if (user === undefined){ %>
+                    <div>
+                        &nbsp;
+                        <strong style="cursor:pointer">로그인</strong>
+                    </div>
+                <% } else{ %>
+                  <div>
+                      &nbsp;
+                      <strong style="cursor:pointer"> <%= user %></strong>
+                  </div>
+                <% } %>
             </div>
         </div>
     </div>
@@ -166,7 +174,7 @@
                 </div>
                 <div style="float: right; width: 50%;">
                     <span class="form_control_label">학과</span>
-                </div> 
+                </div>
             </div>
             <div class="result_div">
                 <div id="std_list_parent">
