--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -28,6 +28,9 @@
                     &nbsp;
                     <strong>seongjin571</strong>
                 </div>
+                <div>
+                        <img src="/images/logout.png" height="8%" style="cursor: pointer;" />
+                    </div>
             </div>
         </div>
     </div>
