--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -34,6 +34,9 @@
                       <strong style="cursor:pointer"> <%= user %></strong>
                   </div>
                     <% } %>
+                    <div>
+                            <img src="/images/logout.png" height="8%" style="cursor: pointer;" />
+                        </div>
             </div>
         </div>
     </div>
