--- a/views/userDetail.ejs
+++ b/views/userDetail.ejs
@@ -26,10 +26,10 @@
                 </div>
                 <div>
                     &nbsp;
-                    <strong>seongjin571</strong>
+                    <strong><%= user %></strong>
                 </div>
                 <div>
-                        <img src="/images/logout.png" height="8%" style="cursor: pointer;" />
+                        <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
                     </div>
             </div>
         </div>
