--- a/views/mypage.ejs
+++ b/views/mypage.ejs
@@ -23,19 +23,14 @@
                     <img id="message_Update" src="/images/message_Icon.png" height="13%" />
                     <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
                 </div>
-                <% if (user === undefined){ %>
-                    <div>
-                        &nbsp;
-                        <strong style="cursor:pointer">로그인</strong>
-                    </div>
-                <% } else{ %>
+         
                   <div>
                       &nbsp;
                       <strong style="cursor:pointer"> <%= user %></strong>
                   </div>
-                    <% } %>
+     
                     <div>
-                            <img src="/images/logout.png" height="8%" style="cursor: pointer;" />
+                            <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
                         </div>
             </div>
         </div>
