--- a/views/userSearch.ejs
+++ b/views/userSearch.ejs
@@ -87,7 +87,7 @@
                         <option>IM1 이상</option>
                         <option>IM2 이상</option>
                         <option>IM3 이상</option>
-                        <option>IL 이상</option>s
+                        <option>IL 이상</option>
                     </select>
                 </div>
 
