유저 서치 완성

--- a/views/userSearch.ejs
+++ b/views/userSearch.ejs
@@ -148,7 +148,8 @@
         </div>
 
         <div class="search_button_div">
-            <div class="search_button" onclick="addStudentList(1,2,3)"> <!-- 검색 버튼 -->
+            <!-- <div class="search_button" onclick="addStudentList(1,2,3)">  검색 버튼 --> -->
+            <div class="search_button">
                 <span style="margin-right: 28px;"><img src="images/search.png" alt="검색" style="width: 40px; margin-right: 4px; margin-left: -8px;">검색</span>
             </div>
         </div>
