--- a/views/specCompare.ejs
+++ b/views/specCompare.ejs
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="/styleshets/specCompare.css">
+  <link rel="stylesheet" type="text/css" href="/stylesheets/specCompare.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
@@ -13,20 +13,23 @@
 
 <body>
   <div id="nav_Div">
-    <img src="/images/logo4.png" id="logo_Image" height="100%">
+    <div id="logo_Div">
+        <img src="/images/logo4.png" id="logo_Image" height="100%">
+    </div>
     <div id="user_Input">
-      <div id="help_Vertical">
-        <div>
-          <img src="/images/user.png" height="20%" />
+        <div id="help_Vertical">
+            <div id="message_Div">
+                <img id="message_Update" src="/images/message_Icon.png" height="13%" />
+                <img id="message" src="/images/message_Icon.png" height="13%" style="display:none" />
+            </div>
+            <div>
+                &nbsp;
+                <strong><%= user %></strong>
+            </div>
+            <div>
+                <img src="/images/logout.png" height="8%" style="cursor: pointer;" onclick="location.href='/logout'"/>
+            </div>
         </div>
-        <div>
-          &nbsp;<strong>seongjin571</strong>
-        </div>
-        <div>ㅣ</div>
-        <div>
-          <strong>컴퓨터공학과</strong>
-        </div>
-      </div>
     </div>
   </div>
   <!-- </div> -->
